--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+}
+
+.content {
+    margin-top: 50px;
+}
+
+footer {
+    margin-top: 20px;
+    color: #706f6f;
+    font-size: 12px;
 }
